<resources>
    <string name="app_name">ResourceMonitor</string>
    <string name="MonitorServiceStarted">Collecting data</string>
    <string name="MonitorServiceStopped">disabled</string>
    <string name="settings_enable_data_collection">Enable Data Collection</string>
    <string name="ui_settings_category_title">Settings</string>
    <string name="ui_uuid">UUID:</string>
    <string name="DataCollectionRunning">Collecting data</string>
    <string name="DataCollectionStopped">Data collection disabled</string>
    <string name="export_filename_prefix" translatable="false">export</string>
    <string name="github_page" translatable="false">https://github.com/ComNets-Bremen/ResourceMonitor</string>
    <string name="mail_destination" translatable="false">cnlab@comnets.uni-bremen.de</string>
    <string name="mail_subject">ResourceMonitor Data</string>
    <string name="mail_message">Hi, I would like to submit my data</string>
    <string name="dialog_mail_provider">Please select a mail app</string>
    <string name="dialog_no_mail_client">No mail client available</string>
    <string name="ui_export_button">Send data to ComNets</string>
    <string name="warn_connect_service">Cannot connect to the background service</string>
    <string name="button_ok">OK</string>
    <string name="dialog_not_available">This function is currently not available</string>
    <string name="dialog_help_title">ResourceMonitor Info</string>
    <string name="ui_info_button">Info</string>
    <string name="ui_status_title">Discharge Behaviour</string>
    <string name="export_progress_title">Export</string>
    <string name="export_progress_text">Starting…</string>
    <string name="export_failed">Export failed</string>
    <string name="settings_data_collection_summary">Enable / disable the data collection</string>
    <string name="action_info">About this App / Data Privacy</string>
    <string name="action_version_info">Version info</string>
    <string name="action_contact">Contact ComNets</string>
    <string name="action_github">Visit project on GitHub</string>
    <string name="action_export_file">Export database to file</string>
    <string name="txt_version_name">Version Name</string>
    <string name="txt_version_code">Version Code</string>
    <string name="txt_version_title">Version Information</string>
    <string name="mail_developer_subject">User request</string>
    <string name="mail_developer_body">Please leave the following information. This will help to solve your problem.</string>
    <string name="mail_developer" translatable="false">cn.dev@comnets.uni-bremen.de</string>
    <string name="action_about_developer">About the developer</string>
    <string name="dialog_export_provider">Select App</string>
    <string name="action_settings">Settings</string>
    <string name="action_advanced">Advanced</string>
    <string name="export_server_start">Starting export</string>
    <string name="url_export_server_upload" translatable="false">https://data.comnets.uni-bremen.de/ResourceMonitor/</string>
    <string name="url_export_server_token" translatable="false">https://data.comnets.uni-bremen.de/ResourceMonitor/getToken/</string>
    <string name="url_export_server_range" translatable="false">https://data.comnets.uni-bremen.de/ResourceMonitor/getRange</string>
    <string name="export_server_check_url">Checking server URLs</string>
    <string name="export_server_check_network">Checking Internet connectivity</string>
    <string name="export_server_request_token">Getting token</string>
    <string name="export_server_check_existing_datasets">Checking for existing datasets</string>
    <string name="export_server_export_data">Exporting Data</string>
    <string name="export_server_upload_data">Uploading Data</string>
    <string name="export_server_done">Export successful</string>
    <string name="export_server_unexpected_error">An unexpected error occurred</string>
    <string name="export_server_check_url_failed">Invalid URLs configured</string>
    <string name="export_server_check_network_failed">No Internet Connection available</string>
    <string name="export_server_request_token_failed">Failed to request a token</string>
    <string name="export_server_check_existing_datasets_failed">Server does not reply</string>
    <string name="export_server_export_data_failed">Export data failed</string>
    <string name="export_server_upload_data_failed">Data upload failed</string>
    <string name="export_server_changed_items">Uploaded datasets</string>
    <string name="export_last_upload">Last data upload: %1$s (%2$s)</string>
    <string name="export_server_thanks">Thank you for sharing the data!</string>
    <string name="export_time_never">Never</string>
    <string name="action_manual">App manual</string>
    <string name="last_item_to_db">Last measurement: %1$s</string>
    <string name="settings_show_notification_bar">Show Notification Bar</string>
    <string name="settings_show_notification_bar_summary">Show an app icon in the notification bar.</string>
    <string name="cannot_deactivate_icon">Cannot deactivate notification: Android might stop the data acquisition.</string>
    <string name="info_text_total_time">Total time</string>
    <string name="info_discharge_unit">%1$s %%/hour</string>
    <string name="info_text_7d_time">Last week</string>
    <string name="info_text_24h_time">Last 24 hours</string>
    <string name="date_year_plural">years</string>
    <string name="date_year_singular">year</string>
    <string name="date_day_plural">days</string>
    <string name="date_day_singular">day</string>
    <string name="date_hour_plural">hours</string>
    <string name="date_hour_singular">hours</string>
    <string name="date_minute_plural">minutes</string>
    <string name="date_minute_singular">minute</string>
    <string name="date_second_plural">seconds</string>
    <string name="date_second_singular">second</string>
    <string name="dischargeHeadingPercentage">Capacity</string>
    <string name="dischargeHeadingTimerspan">Timespan</string>
    <string name="dischargeTable_total">Total</string>
    <string name="dischargeTable_7d">7 days</string>
    <string name="dischargeTable_24h">24 hours</string>
    <string name="ui_24h_to_alltime">The average discharge during the last 24 hours compared to all available data.</string>
    <string name="ui_24h_to_7d">The average discharge during the last 24 hours compared to the last 7 days.</string>
    <string name="dischargeTable_3h">3 hours</string>
    <string name="dischargeHeading">Discharge</string>
    <string name="settings_automatic_data_upload">Automatic Data Upload</string>
    <string name="settings_automatic_data_upload_summary">The data is uploaded automatically if certain conditions like unmetered Internet connection, battery not low etc. apply</string>
    <string name="action_license">Licenses</string>
    <string name="dialog_licenses_title">Licenses</string>
    <string name="ui_automatic_upload_enabled">Automatic data upload enabled</string>
    <string name="ui_automatic_upload_disabled">Automatic data upload disabled</string>
    <string name="settings_automatic_data_upload_on_metered_connection">Require an Unmetered Connection</string>
    <string name="settings_automatic_data_upload_on_metered_connection_summary">Only upload the data if an unmetered connection is available.</string>
    <string name="upload_failed_multiple_times" >The data upload failed multiple times. Maybe think about disabling the automatic upload and manually upload the data if an internet connection is available.</string>
    <string name="upload_failed_multiple_times_title" >Upload failed multiple times</string>
    <string name="txt_failed_uploads">Failed uploads</string>
    <string name="channel_description">Resource Monitor Data</string>
    <string name="broadcast_module_info_title">Used Data Sources</string>
    <string name="broadcast_module_info_description">This is a brief automatically generated description of all used receivers and the type of the collected data. In addition to the collected data the current date and time are stored as well.</string>
    <string name="settings_category_automatic_upload">Automatic upload settings</string>
    <string name="settings_automatic_upload_interval">Automatic Upload Interval. Upload every</string>
</resources>
