<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="de.uni_bremen.comnets.resourcemonitor.MainActivity">
    <item android:id="@+id/action_export_file" android:title="@string/action_export_file" android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_info" android:title="@string/action_info" android:orderInCategory="700" app:showAsAction="never" />
    <item android:id="@+id/action_more" android:title="@string/action_more" android:orderInCategory="800" app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_contact" android:title="@string/action_contact" android:orderInCategory="300" app:showAsAction="never" />
            <item android:id="@+id/action_about_developer" android:title="@string/action_about_developer" android:orderInCategory="400" app:showAsAction="never" />
            <item android:id="@+id/action_github" android:title="@string/action_github" android:orderInCategory="500" app:showAsAction="never" />
            <item android:id="@+id/action_version" android:title="@string/action_version_info" android:orderInCategory="600" app:showAsAction="never" />
        </menu>
    </item>
</menu>