<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <CheckBoxPreference
        android:key="data_collection_enabled"
        android:title="@string/settings_enable_data_collection"
        android:summary="@string/settings_data_collection_summary"
        android:defaultValue="true"
        android:enabled="false"/>
        //-->

    <CheckBoxPreference
        android:key="show_notification_bar"
        android:title="@string/settings_show_notification_bar"
        android:summary="@string/settings_show_notification_bar_summary"
        android:defaultValue="true"
        android:enabled="true"/>

    <CheckBoxPreference
        android:key="automatic_data_upload"
        android:title="@string/settings_automatic_data_upload"
        android:summary="@string/settings_automatic_data_upload_summary"
        android:defaultValue="true"
        android:enabled="true"/>
    <PreferenceCategory
        android:dependency="automatic_data_upload"
        android:title="@string/settings_category_automatic_upload">

        <CheckBoxPreference
            android:key="automatic_data_upload_only_on_unmetered_connection"
            android:title="@string/settings_automatic_data_upload_on_metered_connection"
            android:summary="@string/settings_automatic_data_upload_on_metered_connection_summary"
            android:defaultValue="true"
            android:enabled="true"
            />

        <ListPreference
            android:key="automatic_data_upload_interval"
            android:title="@string/settings_automatic_upload_interval"
            android:summary="%s"
            android:enabled="true"
            android:entries="@array/interval_values_human"
            android:defaultValue="3"
            android:entryValues="@array/interval_values"/>

    </PreferenceCategory>

</PreferenceScreen>

